# architect

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  compare_models.py
src/: __main__.py  core.py  health.py  utils.py
src/architect/: __init__.py  cli.py  comparator.py  fingerprint.py  models.py  report.py  visualizer.py
src/architect/probes/: __init__.py  axiological.py  cultural.py  epistemic.py  ontological.py
tests/: test_benchmark.py  test_core.py  test_fingerprint.py  test_integration.py  test_probes.py
