[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "architect-ai"
version = "0.1.0"
description = "The Architect's Blueprint — How training data constructs AI ontology."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mukunda Katta"},
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
architect = "architect.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
